--- a/src/containers/header/header.css
+++ b/src/containers/header/header.css
@@ -1,159 +1,431 @@
-.phew-header-title{
-    width: 100%;
-    display: flex;
-    justify-content: center;
+@import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100&display=swap");
+
+.phew-header-title {
+  width: 100%;
+  display: flex;
+  justify-content: center;
+  padding-top: 50px;
 }
 
-.phew-header-title p{
-    font-family: 'Be Vietnam Pro', sans-serif;
-    font-size: 75px;
-    font-weight: 100;
-    text-transform: uppercase; 
+.phew-header-title p {
+  font-family: "Be Vietnam Pro", sans-serif;
+  font-size: 75px;
+  font-weight: 100;
+  text-transform: uppercase;
 }
 
-.phew-header-container{
-    height: 800px;
-    width: auto;
+.phew-header-container {
+  height: 800px;
+  width: 100%;
+  position: relative;
+  margin: 0 80px;
+}
+
+.phew-header-container .element-r {
+  position: relative;
+  top: 40px;
+  left: 100px;
+}
+
+.phew-header-container .element-l {
+  position: relative;
+  top: 40px;
+  left: 60px;
+}
+
+.phew-header-container .element1 {
+  position: absolute;
+  top: 144px;
+  left: 103px;
+  transform: rotate(90deg);
+}
+
+.phew-header-container .element3 {
+  position: absolute;
+  top: 82px;
+  left: 240px;
+  transform: rotate(0deg);
+  z-index: -1;
+}
+
+.phew-header-container .element4 {
+  position: absolute;
+  top: 311px;
+  left: 242px;
+  transform: rotate(64deg);
+}
+
+.phew-header-container .element5 {
+  position: absolute;
+  top: 393px;
+  left: 290px;
+  transform: rotate(265deg);
+}
+
+.phew-header-container .element7 {
+  position: absolute;
+  top: 275px;
+  left: 900px;
+  transform: rotate(0deg);
+  z-index: 1;
+}
+
+.phew-header-container .element8 {
+  position: absolute;
+  top: 159px;
+  left: 765px;
+  transform: rotate(-7deg);
+}
+
+.phew-header-container .element9 {
+  position: absolute;
+  top: 375px;
+  left: 750px;
+  transform: rotate(270deg);
+}
+
+.phew-header-container .element10 {
+  position: absolute;
+  top: 120px;
+  left: 1035px;
+  transform: rotate(-5deg);
+}
+
+.phew-header-container .element12 {
+  position: absolute;
+  top: -70px;
+  left: 1030px;
+  transform: rotate(90deg);
+}
+
+.phew-header-container .element13 {
+  position: absolute;
+  top: 129px;
+  left: 93px;
+  transform: rotate(-100deg);
+}
+
+.phew-header-container .element14 {
+  position: absolute;
+  top: 336px;
+  left: 130px;
+  transform: rotate(310deg);
+}
+
+.phew-header-container .element15 {
+  position: absolute;
+  top: 240px;
+  left: 980px;
+  transform: rotate(60deg);
+}
+
+.phew-header-container .element16 {
+  position: absolute;
+  top: 375px;
+  left: 940px;
+  transform: rotate(0deg);
+}
+
+.phew-header-container .element17 {
+  position: absolute;
+  top: 255px;
+  left: 325px;
+  transform: rotate(-22deg);
+}
+
+.phew-header-container .element18 {
+  position: absolute;
+  top: 27px;
+  left: 104px;
+  transform: rotate(270deg);
+}
+
+.phew-header-container .element19 {
+  position: absolute;
+  top: 185px;
+  left: 968px;
+  transform: rotate(60deg);
+}
+
+.phew-header-container .element20 {
+  position: absolute;
+  top: 0px;
+  left: 845px;
+  transform: rotate(0deg);
+  z-index: -1;
+}
+.phew-header {
+  width: 100%;
+}
+
+@media screen and (max-width: 1024px) {
+  .phew-header-container .element-r {
     position: relative;
-    margin: 0 80px;
-}
+    top: 50px;
+    left: -250px;
+  }
 
-.phew-header-container .element1{
+  .phew-header-container .element-l {
+    position: relative;
+    top: 40px;
+    left: -150px;
+  }
+
+  .phew-header-container .element1 {
     position: absolute;
-    top: 144px;
-    left: 103px;
+    top: 140px;
+    left: 145px;
     transform: rotate(90deg);
-}
+  }
 
-.phew-header-container .element2{
+  .phew-header-container .element3 {
     position: absolute;
-    top: 1000px;
-    transform: rotate(90deg);
-}
-
-.phew-header-container .element3{
-    position: absolute;
-    top: 82px;
-    left: 240px;
+    top: 80px;
+    left: 270px;
     transform: rotate(0deg);
     z-index: -1;
-} 
+  }
 
-.phew-header-container .element4{
+  .phew-header-container .element4 {
     position: absolute;
-    top: 311px;
-    left: 242px;
+    top: 305px;
+    left: 255px;
     transform: rotate(64deg);
-}
+  }
 
-.phew-header-container .element5{
+  .phew-header-container .element5 {
     position: absolute;
-    top: 393px;
-    left: 290px;
+    top: 390px;
+    left: 250px;
     transform: rotate(265deg);
-}
+  }
 
-.phew-header-container .element6{
-    position: absolute;
-    top: 1000px;
-    transform: rotate(90deg);
-}
-
-.phew-header-container .element7{
+  .phew-header-container .element7 {
     position: absolute;
     top: 275px;
     left: 900px;
     transform: rotate(0deg);
     z-index: 1;
-}
+  }
 
-.phew-header-container .element8{
+  .phew-header-container .element8 {
     position: absolute;
     top: 159px;
     left: 765px;
     transform: rotate(-7deg);
-}
+  }
 
-.phew-header-container .element9{
+  .phew-header-container .element9 {
     position: absolute;
     top: 375px;
     left: 750px;
     transform: rotate(270deg);
-}
+  }
 
-.phew-header-container .element10{
+  .phew-header-container .element10 {
     position: absolute;
     top: 120px;
     left: 1035px;
     transform: rotate(-5deg);
-}
+  }
 
-.phew-header-container .element11{
-    position: absolute;
-    top: 1000px;
-    transform: rotate(90deg);
-}
-
-.phew-header-container .element12{
+  .phew-header-container .element12 {
     position: absolute;
     top: -70px;
     left: 1030px;
     transform: rotate(90deg);
-}
+  }
 
-.phew-header-container .element13{
+  .phew-header-container .element13 {
     position: absolute;
-    top: 129px;
-    left: 93px;
+    top: 110px;
+    left: 115px;
     transform: rotate(-100deg);
-}
+  }
 
-.phew-header-container .element14{
+  .phew-header-container .element14 {
     position: absolute;
-    top: 336px;
-    left: 130px;
+    top: 330px;
+    left: 120px;
     transform: rotate(310deg);
-}
+  }
 
-.phew-header-container .element15{
+  .phew-header-container .element15 {
     position: absolute;
     top: 240px;
     left: 980px;
     transform: rotate(60deg);
-}
+  }
 
-.phew-header-container .element16{
+  .phew-header-container .element16 {
     position: absolute;
     top: 375px;
     left: 940px;
     transform: rotate(0deg);
-}
+  }
 
-.phew-header-container .element17{
+  .phew-header-container .element17 {
     position: absolute;
-    top: 255px;
-    left: 325px;
+    top: 260px;
+    left: 360px;
     transform: rotate(-22deg);
-}
+  }
 
-.phew-header-container .element18{
+  .phew-header-container .element18 {
     position: absolute;
     top: 27px;
     left: 104px;
     transform: rotate(270deg);
-}
+  }
 
-.phew-header-container .element19{
+  .phew-header-container .element19 {
     position: absolute;
     top: 185px;
     left: 968px;
     transform: rotate(60deg);
-}
+  }
 
-.phew-header-container .element20{
+  .phew-header-container .element20 {
     position: absolute;
     top: 0px;
     left: 845px;
     transform: rotate(0deg);
     z-index: -1;
+  }
+}
+
+@media screen and (max-width: 786px) {
+  .phew-header-container .element-r {
+    position: relative;
+    top: 50px;
+    left: -450px;
+  }
+
+  .phew-header-container .element-l {
+    position: relative;
+    top: 40px;
+    left: -180px;
+  }
+
+  .phew-header-container .element1 {
+    position: absolute;
+    top: 140px;
+    left: 130px;
+    transform: rotate(90deg);
+  }
+
+  .phew-header-container .element3 {
+    position: absolute;
+    top: 80px;
+    left: 270px;
+    transform: rotate(0deg);
+    z-index: -1;
+  }
+
+  .phew-header-container .element4 {
+    position: absolute;
+    top: 305px;
+    left: 210px;
+    transform: rotate(64deg);
+  }
+
+  .phew-header-container .element5 {
+    position: absolute;
+    top: 390px;
+    left: 235px;
+    transform: rotate(265deg);
+  }
+
+  .phew-header-container .element7 {
+    position: absolute;
+    top: 275px;
+    left: 900px;
+    transform: rotate(0deg);
+    z-index: 1;
+  }
+
+  .phew-header-container .element8 {
+    position: absolute;
+    top: 159px;
+    left: 765px;
+    transform: rotate(-7deg);
+  }
+
+  .phew-header-container .element9 {
+    position: absolute;
+    top: 375px;
+    left: 750px;
+    transform: rotate(270deg);
+  }
+
+  .phew-header-container .element10 {
+    position: absolute;
+    top: 120px;
+    left: 1035px;
+    transform: rotate(-5deg);
+  }
+
+  .phew-header-container .element12 {
+    position: absolute;
+    top: -70px;
+    left: 1000px;
+    transform: rotate(90deg);
+  }
+
+  .phew-header-container .element13 {
+    position: absolute;
+    top: 110px;
+    left: 115px;
+    transform: rotate(-100deg);
+  }
+
+  .phew-header-container .element14 {
+    position: absolute;
+    top: 330px;
+    left: 120px;
+    transform: rotate(310deg);
+  }
+
+  .phew-header-container .element15 {
+    position: absolute;
+    top: 240px;
+    left: 980px;
+    transform: rotate(60deg);
+  }
+
+  .phew-header-container .element16 {
+    position: absolute;
+    top: 375px;
+    left: 940px;
+    transform: rotate(0deg);
+  }
+
+  .phew-header-container .element17 {
+    position: absolute;
+    top: 260px;
+    left: 310px;
+    transform: rotate(-22deg);
+  }
+
+  .phew-header-container .element18 {
+    position: absolute;
+    top: 25px;
+    left: 155px;
+    transform: rotate(270deg);
+  }
+
+  .phew-header-container .element19 {
+    position: absolute;
+    top: 185px;
+    left: 968px;
+    transform: rotate(60deg);
+  }
+
+  .phew-header-container .element20 {
+    position: absolute;
+    top: 0px;
+    left: 845px;
+    transform: rotate(0deg);
+    z-index: -1;
+  }
 }
