--- a/src/components/feature/feature.css
+++ b/src/components/feature/feature.css
@@ -3,7 +3,7 @@
 .phew-feature-title > p {
   display: flex;
   font-family: "Be Vietnam Pro", sans-serif;
-  font-size: 70px;
+  font-size: 65px;
   text-transform: uppercase;
   justify-content: center;
   font-weight: 100;
@@ -92,12 +92,27 @@
   border-radius: 50px;
 }
 
+.card #bi img {
+  height: 70px;
+  position: relative;
+  top: 60px;
+  right: 110px;
+}
+
+.card #bot img {
+  height: 60px;
+  position: relative;
+  top: 60px;
+  right: 110px;
+}
+
 .card .img img {
-  height: 50px;
+  height: 60px;
   position: relative;
   top: 60px;
   right: 120px;
 }
+
 .carousel .card h2 {
   font-family: "Be Vietnam Pro", sans-serif;
   font-size: 2.4rem;
@@ -105,16 +120,41 @@
   top: -120px;
   right: 30px;
 }
+
+.carousel .card h2#h2-mam {
+  font-family: "Be Vietnam Pro", sans-serif;
+  font-size: 2.4rem;
+  position: relative;
+  top: -115px;
+  right: 40px;
+}
+
+.carousel .card h2#h2-bi {
+  font-family: "Be Vietnam Pro", sans-serif;
+  font-size: 2.4rem;
+  position: relative;
+  top: -120px;
+  right: 50px;
+}
+
+.carousel .card h2#h2-nau {
+  font-family: "Be Vietnam Pro", sans-serif;
+  font-size: 2.4rem;
+  position: relative;
+  top: -120px;
+  right: 40px;
+}
+
 .carousel .card span {
   font-family: "Be Vietnam Pro", sans-serif;
   color: #000;
   font-size: 1.31rem;
   position: relative;
   text-align: start;
-  padding-left: 80px;
-  padding-right: 70px;
+  padding-left: 70px;
+  padding-right: 80px;
   top: -120px;
-  left: 10px;
+  left: 23px;
 }
 
 .carousel #mam {
