--- a/src/containers/possibility/possibility.css
+++ b/src/containers/possibility/possibility.css
@@ -1,7 +1,8 @@
 @import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100&display=swap");
 
 .scroller {
-  max-width: 600px;
+  display: grid;
+  place-content: start;
   margin-bottom: 50px;
 }
 
@@ -11,23 +12,18 @@
   gap: 50px;
 }
 
+.scroller[data-animated="true"] {
+  overflow: hidden;
+}
+
 .scroller[data-animated="true"] .scroller__inner {
-  width: max-content;
   flex-wrap: nowrap;
-  animation: scroll var(--_animation-duration, 40s)
-    var(--_animation-direction, forwards) linear infinite;
+  animation: scroll var(--_animation-duration, 50s)
+    var(--_animation-direction, rev) linear infinite;
 }
 
 .scroller[data-direction="right"] {
   --_animation-direction: reverse;
-}
-
-.scroller[data-direction="left"] {
-  --_animation-direction: forwards;
-}
-
-.scroller[data-speed="fast"] {
-  --_animation-duration: 20s;
 }
 
 .scroller[data-speed="slow"] {
@@ -65,6 +61,6 @@
 
 @keyframes scroll {
   to {
-    transform: translate(calc(-50% - 0.5rem));
+    transform: translate(calc(-50% + 1rem));
   }
 }
