--- a/src/containers/possibility2/possibility2.css
+++ b/src/containers/possibility2/possibility2.css
@@ -1,33 +1,28 @@
 @import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100&display=swap");
 
 .scroller2 {
-  max-width: 600px;
+  display: grid;
+  place-content: start;
   margin-bottom: 100px;
 }
 
 .scroller__inner {
   display: flex;
   flex-wrap: wrap;
-  gap: 50px;
+}
+
+.scroller2[data-animated="true"] {
+  overflow: hidden;
 }
 
 .scroller2[data-animated="true"] .scroller__inner {
-  width: max-content;
   flex-wrap: nowrap;
-  animation: scroll var(--_animation-duration, 40s)
+  animation: scroll-2 var(--_animation-duration, 50s)
     var(--_animation-direction, forwards) linear infinite;
-}
-
-.scroller2[data-direction="right"] {
-  --_animation-direction: reverse;
 }
 
 .scroller2[data-direction="left"] {
   --_animation-direction: forwards;
-}
-
-.scroller2[data-speed="fast"] {
-  --_animation-duration: 20s;
 }
 
 .scroller2[data-speed="slow"] {
@@ -63,8 +58,8 @@
   padding-left: 10px;
 }
 
-@keyframes scroll {
+@keyframes scroll-2 {
   to {
-    transform: translate(calc(-50% - 0.5rem));
+    transform: translate(calc(-50% + 10rem));
   }
 }
