--- a/src/containers/blog/blog.css
+++ b/src/containers/blog/blog.css
@@ -1,4 +1,5 @@
 @import url("https://fonts.googleapis.com/css2?family=Be+Vietnam+Pro:wght@100&display=swap");
+@import url("https://flackr.github.io/scroll-timeline/dist/scroll-timeline.js");
 
 .blog-container {
   position: relative;
